@@ -40,10 +40,10 @@ This is the numeric process id that a program has.
 This is the shortened command name. When an interpreter starts a program, it usually renames the program to the script rather than the interpreter.
 .TP
 .B exe
-This is the full path to the executable. Globbing is not supported. You may also use the special keyword \fBunpackaged\fP to match on the subject not being listed in the rpm database.
+This is the full path to the executable. Globbing is not supported. You may also use the special keyword \fBuntrusted\fP to match on the subject not being listed in the rpm database.
 .TP
 .B exe_dir
-If you wish to match a directory, then use this by giving the full path to the directory. Its recommended to end with the / to ensure it matches a directory. There are 3 keywords that \fIexe_dir\fP supports: \fBexecdirs\fP, \fBsystemdirs\fP, \fBunpackaged\fP.
+If you wish to match a directory, then use this by giving the full path to the directory. Its recommended to end with the / to ensure it matches a directory. There are 3 keywords that \fIexe_dir\fP supports: \fBexecdirs\fP, \fBsystemdirs\fP, \fBuntrusted\fP.
 .RS
 .TP 12
 .B execdirs
@@ -61,8 +61,8 @@ The \fIexecdirs\fP option will match against the following list of directories:
 .B systemdirs
 The \fIexecdirs\fP option will match against the same list as \fIexecdirs\fP but also includes /etc/.
 .TP 12
-.B unpackaged
-The \fIunpackaged\fP option will look up the current executable's full path in the rpm database to see if the execuatble is known to the system. The rule will trigger if the file in question is not packaged.
+.B untrusted
+The \fIuntrusted\fP option will look up the current executable's full path in the rpm database to see if the execuatble is known to the system. The rule will trigger if the file in question is not packaged.
 .RE
 .TP
 .B exe_type
@@ -86,10 +86,10 @@ The object is the file that the subject is interacting with. The fields in the r
 This matches against any subject. When used, this must be the only subject in the rule.
 .TP
 .B path
-This is the full path to the file that will be accessed. Globbing is not supported. You may also use the special keyword \fBunpackaged\fP to match on the subject not being listed in the rpm database.
+This is the full path to the file that will be accessed. Globbing is not supported. You may also use the special keyword \fBuntrusted\fP to match on the subject not being listed in the rpm database.
 .TP
 .B dir
-If you wish to match on access to any file in a directory, then use this by giving the full path to the directory. Its recommended to end with the / to ensure it matches a directory. There are 3 keywords that \fIexe_dir\fP supports: \fBexecdirs\fP, \fBsystemdirs\fP, \fBunpackaged\fP. See the \fBexe_dir\fP for an explanation of these keywords.
+If you wish to match on access to any file in a directory, then use this by giving the full path to the directory. Its recommended to end with the / to ensure it matches a directory. There are 3 keywords that \fIexe_dir\fP supports: \fBexecdirs\fP, \fBsystemdirs\fP, \fBuntrusted\fP. See the \fBexe_dir\fP for an explanation of these keywords.
 .TP
 .B device
 This option will match against the device that the file being accessed resides on. To use it, start with /dev/ and add the target device name.
