@@ -4,6 +4,7 @@
 - Override rpm's signal handling
 - Use private database as trust store
 - Update the rules for python 3.6 and remove systemd exclusion
+- Rename exec_dir rule option unpackaged to untrusted
 
 0.8.5
 - Update spec file and license info
